<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Authorization.RegistrationActivity"
    android:background="@color/colorPrimaryDark"

    >


    <RelativeLayout
        android:layout_marginTop="@dimen/authFormTopMargin"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_width="@dimen/RegistrationCardWidth"
        android:layout_height="@dimen/RegistrationCardHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:singleLine="true"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:id="@+id/register_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_login" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:singleLine="true"

                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:singleLine="true"

                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:singleLine="true"

                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:id="@+id/register_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/RegistrationCardWidth"
        android:layout_height="@dimen/RegistrationButtonHeight"
        android:background="@drawable/auth_button_props"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        />

</LinearLayout>