<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"

    >

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authFormTopMargin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:singleLine="true"
                    android:hint="@string/enter_login"
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:outlineSpotShadowColor="@android:color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:singleLine="true"
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>


    <Button
        android:layout_gravity="center"
        android:id="@+id/btnSignIn"
        android:layout_width="@dimen/RegistrationCardWidth"
        android:layout_height="@dimen/RegistrationButtonHeight"
        android:background="@drawable/auth_button_props"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:textColor="@color/colorBlue"
        android:textStyle="bold"
        android:text="@string/don_t_have_an_account_sign_up"
        android:layout_gravity="center|bottom"
        android:id="@+id/go_to_register_button"
        android:textSize="@dimen/goToRegistration"
        />

</LinearLayout>